--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,16 @@ duplicates/
 data-all/
 duplicates-all/
 valid/
-google-images-download/
 .DS_Store
 *.h5
 *h5
+
+nn/bird-vs-not-bird/models/bird-vs-not-bird-weights-12.h5
+nn/bird-vs-not-bird/models/bird-vs-not-bird-log.csv
+nn/bird-vs-not-bird/models/bird-vs-not-bird-weights-01.h5
+nn/bird-vs-not-bird/models/bird-vs-not-bird-weights-02.h5
+nn/bird-vs-not-bird/models/bird-vs-not-bird-weights-04.h5
+nn/bird-vs-not-bird/models/bird-vs-not-bird-weights-05.h5
+nn/bird-vs-not-bird/models/bird-vs-not-bird-weights-06.h5
+nn/bird-vs-not-bird/models/bird-vs-not-bird-weights-07.h5
+nn/bird-vs-not-bird/models/bird-vs-not-bird-weights-08.h5
