--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,13 @@ nn/bird-vs-not-bird/models/bird-vs-not-bird-weights-05.h5
 nn/bird-vs-not-bird/models/bird-vs-not-bird-weights-06.h5
 nn/bird-vs-not-bird/models/bird-vs-not-bird-weights-07.h5
 nn/bird-vs-not-bird/models/bird-vs-not-bird-weights-08.h5
+datasets/create_thumbnails.py
+nn/bird-vs-not-bird/models/bird-vs-not-bird-weights-12.h5
+nn/bird-vs-not-bird/models/bird-vs-not-bird-log.csv
+nn/bird-vs-not-bird/models/bird-vs-not-bird-weights-01.h5
+nn/bird-vs-not-bird/models/bird-vs-not-bird-weights-02.h5
+nn/bird-vs-not-bird/models/bird-vs-not-bird-weights-04.h5
+nn/bird-vs-not-bird/models/bird-vs-not-bird-weights-05.h5
+nn/bird-vs-not-bird/models/bird-vs-not-bird-weights-06.h5
+nn/bird-vs-not-bird/models/bird-vs-not-bird-weights-07.h5
+nn/bird-vs-not-bird/models/bird-vs-not-bird-weights-08.h5
